[package]
name = "sts-rs"
version = "0.1.0"
authors = ["Bas Bossink <bas.bossink@gmail.com>"]
edition = "2018"
description = "Simple Time Series in Rust, a very simple way to record time-series data and serve graphs of that data."
repository = "https://github.com/basbossink/sts-rs"
keywords = ["time-series"]
categories = ["visualization"]
license = "BSD-2-Clause"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
chrono = "0.4"