[package]
name = "sts-rs"
version = "0.1.0"
authors = ["Bas Bossink <bas.bossink@gmail.com>"]
edition = "2018"
description = "Simple Time Series in Rust, a very simple way to record time-series data and serve graphs of that data."
repository = "https://github.com/basbossink/sts-rs"
keywords = ["time-series"]
categories = ["visualization"]
license = "BSD-2-Clause"
build = "build.rs"

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
futures = "0.3.1"
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
chrono = "0.4"
csv = "1.1"
dirs = "2.0"
env_logger = "0.7"
askama = "0.8"
log = "0.4"

[build-dependencies]
askama = "0.8"
vergen = "3"